--- a/package.json
+++ b/package.json
@@ -2,29 +2,39 @@
   "name": "positional-flat-file-to-json",
   "version": "0.0.1",
   "description": "Converts a positional flat file to json",
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "dependencies": {
     "fs-extra": "^4.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "xo": "^0.18.2"
   },
   "scripts": {
-    "init": "mkdir lib",
+    "init": "mkdir dist",
     "start": "npm run dev",
     "dev": "npm test -- -w",
-    "clean": "rm -rf lib",
+    "clean": "rm -rf dist",
     "prebuild": "npm run clean && npm run init",
-    "build": "babel ./src -d ./lib",
+    "build": "babel ./src -d ./dist",
     "pretest": "npm run build",
-    "test": "mocha --compilers js:babel-core/register ./test/**/*.js",
+    "test": "xo && mocha --compilers js:babel-core/register ./test/**/*.js",
     "precommit": "npm test && npm run build",
     "prepublish": "npm run build"
   },
-
+  "xo": {
+    "env": ["mocha"],
+    "rules": {
+      "no-unused-vars": [
+        "error",
+        { "varsIgnorePattern": "mocha" }
+      ]
+    }
+  },
   "repository": {
     "type": "git",
     "url": "test"
